--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Coder Assistant</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- VS Code Dark Theme for Highlight.js -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/vs2015.min.css">
     <link href="/css/style.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg border-bottom border-secondary" style="background-color: var(--sidebar-bg);">
         <div class="container-fluid">
@@ -26,15 +31,17 @@
                 <div class="card flex-grow-1 border-0 shadow-sm" style="background-color: transparent;">
                     <div id="chat-container" class="card-body chat-container">
                         <div class="message ai-message">
-                            Hello! I am your AI Coder Assistant. I can generate Python code and help you debug. 
+                            Hello! I am your AI Coder Assistant. I can generate Python code and help you debug.
                             <br>Try asking: <b>"Write a Fibonacci function"</b>
                         </div>
                     </div>
                 </div>
                 <div class="mt-3">
                     <div class="input-group">
-                        <textarea id="message-input" class="form-control" rows="2" placeholder="Type your request..."></textarea>
-                        <button id="send-btn" class="btn btn-primary">Send</button>
+                        <textarea id="message-input" class="form-control" rows="2" placeholder="Type your request..."
+                            style="background-color: var(--sidebar-bg); color: var(--text-color); border-color: var(--secondary-color);"></textarea>
+                        <button id="send-btn" class="btn"
+                            style="background-color: var(--accent-color); color: white;">Send</button>
                     </div>
                 </div>
             </div>
@@ -43,16 +50,20 @@
             <div class="col-md-6 d-flex flex-column" style="height: calc(100vh - 100px);">
                 <!-- Editor -->
                 <div class="card border-0 mb-3 flex-grow-1">
-                    <div class="card-header d-flex justify-content-between align-items-center" style="background-color: var(--sidebar-bg); color: var(--text-color);">
+                    <div class="card-header d-flex justify-content-between align-items-center"
+                        style="background-color: var(--sidebar-bg); color: var(--text-color);">
                         <span class="fw-bold">🐍 Python Editor</span>
-                        <button id="run-btn" class="btn btn-success btn-sm">▶ Run Code</button>
+                        <button id="run-btn" class="btn btn-sm"
+                            style="background-color: var(--secondary-color); color: white;">▶ Run Code</button>
                     </div>
-                    <textarea id="code-editor" class="editor-textarea" placeholder="# Your code will appear here..."></textarea>
+                    <textarea id="code-editor" class="editor-textarea"
+                        placeholder="# Your code will appear here..."></textarea>
                 </div>
-                
+
                 <!-- Output -->
                 <div class="card border-0 flex-grow-1" style="min-height: 200px;">
-                    <div class="card-header fw-bold" style="background-color: var(--sidebar-bg); color: var(--text-color);">
+                    <div class="card-header fw-bold"
+                        style="background-color: var(--sidebar-bg); color: var(--text-color);">
                         🖥️ Output
                     </div>
                     <div id="output-content" class="output-panel">
@@ -65,4 +76,5 @@
 
     <script src="/js/script.js"></script>
 </body>
+
 </html>
