--- a/static/index.html
+++ b/static/index.html
@@ -1,80 +1,129 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Coder Assistant</title>
+
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- VS Code Dark Theme for Highlight.js -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/vs2015.min.css">
+
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Code Highlight -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/vs2015.min.css">
+
     <link href="/css/style.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg border-bottom border-secondary" style="background-color: var(--sidebar-bg);">
+
+<!-- ================= Header ================= -->
+<header class="app-header">
+    <nav class="navbar navbar-expand-lg border-bottom">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="color: var(--text-color);">
-                🤖 AI Coder Assistant
-            </a>
-            <div class="d-flex">
-                <button id="theme-toggle" class="btn btn-outline-secondary btn-sm">☀️ Light Mode</button>
+            <div class="d-flex align-items-center gap-2">
+                <i class="bi bi-cpu fs-4"></i>
+                <span class="navbar-brand mb-0">AI Coder Assistant</span>
+            </div>
+
+            <div class="d-flex align-items-center gap-2">
+                <button id="theme-toggle" class="btn btn-outline-secondary btn-sm">
+                    <i class="bi bi-sun"></i>
+                    <span class="ms-1">Light Mode</span>
+                </button>
             </div>
         </div>
     </nav>
+</header>
 
-    <div class="container-fluid py-3">
-        <div class="row g-3">
-            <!-- Left Panel: Chat -->
-            <div class="col-md-6 d-flex flex-column" style="height: calc(100vh - 100px);">
-                <div class="card flex-grow-1 border-0 shadow-sm" style="background-color: transparent;">
-                    <div id="chat-container" class="card-body chat-container">
-                        <div class="message ai-message">
-                            Hello! I am your AI Coder Assistant. I can generate Python code and help you debug.
-                            <br>Try asking: <b>"Write a Fibonacci function"</b>
+<!-- ================= Main Layout ================= -->
+<main class="container-fluid app-container py-3">
+    <div class="row g-3 app-layout">
+
+        <!-- ============ Chat Panel ============ -->
+        <section class="col-lg-6 col-md-12 app-panel chat-panel d-flex flex-column">
+
+            <!-- Chat Messages -->
+            <div class="card flex-grow-1 border-0 chat-card">
+                <div id="chat-container" class="card-body chat-messages">
+
+                    <!-- AI Welcome Message -->
+                    <div class="chat-message ai-message">
+                        <div class="message-avatar">
+                            <i class="bi bi-robot"></i>
+                        </div>
+                        <div class="message-content">
+                            <p>Hello! I am your AI Coder Assistant.</p>
+                            <p>Try asking: <b>"Write a Fibonacci function"</b></p>
                         </div>
                     </div>
-                </div>
-                <div class="mt-3">
-                    <div class="input-group">
-                        <textarea id="message-input" class="form-control" rows="2" placeholder="Type your request..."
-                            style="background-color: var(--sidebar-bg); color: var(--text-color); border-color: var(--secondary-color);"></textarea>
-                        <button id="send-btn" class="btn"
-                            style="background-color: var(--accent-color); color: white;">Send</button>
-                    </div>
+
                 </div>
             </div>
 
-            <!-- Right Panel: Editor & Output -->
-            <div class="col-md-6 d-flex flex-column" style="height: calc(100vh - 100px);">
-                <!-- Editor -->
-                <div class="card border-0 mb-3 flex-grow-1">
-                    <div class="card-header d-flex justify-content-between align-items-center"
-                        style="background-color: var(--sidebar-bg); color: var(--text-color);">
-                        <span class="fw-bold">🐍 Python Editor</span>
-                        <button id="run-btn" class="btn btn-sm"
-                            style="background-color: var(--secondary-color); color: white;">▶ Run Code</button>
-                    </div>
-                    <textarea id="code-editor" class="editor-textarea"
-                        placeholder="# Your code will appear here..."></textarea>
-                </div>
+            <!-- Chat Input -->
+            <div class="chat-input mt-3">
+                <div class="input-group">
+                    <textarea id="message-input"
+                              class="form-control"
+                              rows="2"
+                              placeholder="Ask me to write, explain, or debug code..."></textarea>
 
-                <!-- Output -->
-                <div class="card border-0 flex-grow-1" style="min-height: 200px;">
-                    <div class="card-header fw-bold"
-                        style="background-color: var(--sidebar-bg); color: var(--text-color);">
-                        🖥️ Output
-                    </div>
-                    <div id="output-content" class="output-panel">
-                        <span class="text-muted">Waiting for execution...</span>
-                    </div>
+                    <button id="send-btn" class="btn btn-primary">
+                        <i class="bi bi-send"></i>
+                        <span class="ms-1">Send</span>
+                    </button>
                 </div>
             </div>
-        </div>
+
+        </section>
+
+        <!-- ============ Code Panel ============ -->
+        <section class="col-lg-6 col-md-12 app-panel code-panel d-flex flex-column">
+
+            <!-- Editor -->
+            <div class="card flex-grow-1 mb-3 border-0 editor-card">
+                <div class="card-header d-flex align-items-center justify-content-between">
+                    <div class="d-flex align-items-center gap-2">
+                        <i class="bi bi-code-slash"></i>
+                        <span class="fw-semibold">Python Editor</span>
+                    </div>
+
+                    <button id="run-btn" class="btn btn-sm btn-success">
+                        <i class="bi bi-play-fill"></i>
+                        <span class="ms-1">Run</span>
+                    </button>
+                </div>
+
+                <div class="editor-wrapper flex-grow-1">
+                    <textarea id="code-editor"
+                              class="editor-textarea"
+                              placeholder="# Your generated code will appear here..."></textarea>
+                </div>
+            </div>
+
+            <!-- Output -->
+            <div class="card border-0 output-card">
+                <div class="card-header d-flex align-items-center gap-2">
+                    <i class="bi bi-terminal"></i>
+                    <span class="fw-semibold">Execution Output</span>
+                </div>
+
+                <div id="output-content" class="output-panel">
+                    <span class="text-muted">Waiting for execution...</span>
+                </div>
+            </div>
+
+        </section>
+
     </div>
+</main>
 
-    <script src="/js/script.js"></script>
+<!-- ================= Scripts ================= -->
+<script src="/js/script.js"></script>
 </body>
-
 </html>
