--- a/static/index.html
+++ b/static/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Coder Assistant</title>
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
+        rel="stylesheet">
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Code Highlight -->
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/vs2015.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/vs2015.min.css">
 
     <link href="/css/style.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
@@ -21,109 +29,107 @@
 
 <body>
 
-<!-- ================= Header ================= -->
-<header class="app-header">
-    <nav class="navbar navbar-expand-lg border-bottom">
-        <div class="container-fluid">
-            <div class="d-flex align-items-center gap-2">
-                <i class="bi bi-cpu fs-4"></i>
-                <span class="navbar-brand mb-0">AI Coder Assistant</span>
-            </div>
+    <!-- ================= Header ================= -->
+    <header class="app-header">
+        <nav class="navbar navbar-expand-lg border-bottom">
+            <div class="container-fluid">
+                <div class="d-flex align-items-center gap-2">
+                    <i class="bi bi-cpu fs-4"></i>
+                    <span class="navbar-brand mb-0">AI Coder Assistant</span>
+                </div>
 
-            <div class="d-flex align-items-center gap-2">
-                <button id="theme-toggle" class="btn btn-outline-secondary btn-sm">
-                    <i class="bi bi-sun"></i>
-                    <span class="ms-1">Light Mode</span>
-                </button>
+                <div class="d-flex align-items-center gap-2">
+                    <button id="theme-toggle" class="btn btn-outline-secondary btn-sm">
+                        <i class="bi bi-sun"></i>
+                        <span class="ms-1">Light Mode</span>
+                    </button>
+                </div>
             </div>
+        </nav>
+    </header>
+
+    <!-- ================= Main Layout ================= -->
+    <main class="container-fluid app-container py-3">
+        <div class="row g-3 app-layout">
+
+            <!-- ============ Chat Panel ============ -->
+            <section class="col-lg-6 col-md-12 app-panel chat-panel d-flex flex-column">
+
+                <!-- Chat Messages -->
+                <div class="card flex-grow-1 border-0 chat-card">
+                    <div id="chat-container" class="card-body chat-messages">
+
+                        <!-- AI Welcome Message -->
+                        <div class="chat-message ai-message">
+                            <div class="message-avatar">
+                                <i class="bi bi-robot"></i>
+                            </div>
+                            <div class="message-content">
+                                <p>Hello! I am your AI Coder Assistant.</p>
+                                <p>Try asking: <b>"Write a Fibonacci function"</b></p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- Chat Input -->
+                <div class="chat-input mt-3">
+                    <div class="input-group">
+                        <textarea id="message-input" class="form-control" rows="2"
+                            placeholder="Ask me to write, explain, or debug code..."></textarea>
+
+                        <button id="send-btn" class="btn btn-primary">
+                            <i class="bi bi-send"></i>
+                            <span class="ms-1">Send</span>
+                        </button>
+                    </div>
+                </div>
+
+            </section>
+
+            <!-- ============ Code Panel ============ -->
+            <section class="col-lg-6 col-md-12 app-panel code-panel d-flex flex-column">
+
+                <!-- Editor -->
+                <div class="card flex-grow-1 mb-3 border-0 editor-card">
+                    <div class="card-header d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center gap-2">
+                            <i class="bi bi-code-slash"></i>
+                            <span class="fw-semibold">Python Editor</span>
+                        </div>
+
+                        <button id="run-btn" class="btn btn-sm btn-success">
+                            <i class="bi bi-play-fill"></i>
+                            <span class="ms-1">Run</span>
+                        </button>
+                    </div>
+
+                    <div class="editor-wrapper flex-grow-1">
+                        <textarea id="code-editor" class="editor-textarea"
+                            placeholder="# Your generated code will appear here..."></textarea>
+                    </div>
+                </div>
+
+                <!-- Output -->
+                <div class="card border-0 output-card">
+                    <div class="card-header d-flex align-items-center gap-2">
+                        <i class="bi bi-terminal"></i>
+                        <span class="fw-semibold">Execution Output</span>
+                    </div>
+
+                    <div id="output-content" class="output-panel">
+                        <span class="text-muted">Waiting for execution...</span>
+                    </div>
+                </div>
+
+            </section>
+
         </div>
-    </nav>
-</header>
+    </main>
 
-<!-- ================= Main Layout ================= -->
-<main class="container-fluid app-container py-3">
-    <div class="row g-3 app-layout">
-
-        <!-- ============ Chat Panel ============ -->
-        <section class="col-lg-6 col-md-12 app-panel chat-panel d-flex flex-column">
-
-            <!-- Chat Messages -->
-            <div class="card flex-grow-1 border-0 chat-card">
-                <div id="chat-container" class="card-body chat-messages">
-
-                    <!-- AI Welcome Message -->
-                    <div class="chat-message ai-message">
-                        <div class="message-avatar">
-                            <i class="bi bi-robot"></i>
-                        </div>
-                        <div class="message-content">
-                            <p>Hello! I am your AI Coder Assistant.</p>
-                            <p>Try asking: <b>"Write a Fibonacci function"</b></p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <!-- Chat Input -->
-            <div class="chat-input mt-3">
-                <div class="input-group">
-                    <textarea id="message-input"
-                              class="form-control"
-                              rows="2"
-                              placeholder="Ask me to write, explain, or debug code..."></textarea>
-
-                    <button id="send-btn" class="btn btn-primary">
-                        <i class="bi bi-send"></i>
-                        <span class="ms-1">Send</span>
-                    </button>
-                </div>
-            </div>
-
-        </section>
-
-        <!-- ============ Code Panel ============ -->
-        <section class="col-lg-6 col-md-12 app-panel code-panel d-flex flex-column">
-
-            <!-- Editor -->
-            <div class="card flex-grow-1 mb-3 border-0 editor-card">
-                <div class="card-header d-flex align-items-center justify-content-between">
-                    <div class="d-flex align-items-center gap-2">
-                        <i class="bi bi-code-slash"></i>
-                        <span class="fw-semibold">Python Editor</span>
-                    </div>
-
-                    <button id="run-btn" class="btn btn-sm btn-success">
-                        <i class="bi bi-play-fill"></i>
-                        <span class="ms-1">Run</span>
-                    </button>
-                </div>
-
-                <div class="editor-wrapper flex-grow-1">
-                    <textarea id="code-editor"
-                              class="editor-textarea"
-                              placeholder="# Your generated code will appear here..."></textarea>
-                </div>
-            </div>
-
-            <!-- Output -->
-            <div class="card border-0 output-card">
-                <div class="card-header d-flex align-items-center gap-2">
-                    <i class="bi bi-terminal"></i>
-                    <span class="fw-semibold">Execution Output</span>
-                </div>
-
-                <div id="output-content" class="output-panel">
-                    <span class="text-muted">Waiting for execution...</span>
-                </div>
-            </div>
-
-        </section>
-
-    </div>
-</main>
-
-<!-- ================= Scripts ================= -->
-<script src="/js/script.js"></script>
+    <!-- ================= Scripts ================= -->
+    <script src="/js/script.js"></script>
 </body>
+
 </html>
