--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,9 @@
 
     <link href="/css/style.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
+
 
 <body>
 
@@ -111,7 +113,7 @@
 
         </div>
     </main>
-    
+
     <!-- ================= Footer (Fixed Input) ================= -->
     <footer class="app-footer">
         <div class="container-fluid">
