--- a/static/index.html
+++ b/static/index.html
@@ -39,13 +39,13 @@
             <div class="container-fluid">
                 <div class="d-flex align-items-center gap-2">
                     <i class="bi bi-cpu fs-4" style="color: var(--accent-color);"></i>
-                    <span class="navbar-brand mb-0">AI Coder PRO</span>
+                    <span class="navbar-brand mb-0">My Coder</span>
                 </div>
 
                 <div class="d-flex align-items-center gap-2">
                     <button id="toggle-sidebar" class="btn btn-outline-secondary btn-sm me-2">
                         <i class="bi bi-layout-sidebar-reverse"></i>
-                        <span class="d-none d-md-inline ms-1">Toggle Editor</span>
+                        <span class="d-none d-md-inline ms-1">Editor</span>
                     </button>
                     <button id="theme-toggle" class="btn btn-outline-secondary btn-sm">
                         <i class="bi bi-sun"></i>
@@ -68,7 +68,7 @@
                             <i class="bi bi-robot"></i>
                         </div>
                         <div class="message-content">
-                            <p>Welcome to <b>AI Coder PRO</b>! How can I help you code today?</p>
+                            <p>Welcome to <b>My Coder </b>! How can I help you code today?</p>
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
             </section>
 
             <!-- ============ Code Sidebar (Collapsible) ============ -->
-            <aside id="code-sidebar" class="code-sidebar glass-effect">
+            <aside id="code-sidebar" class="code-sidebar glass-effect collapsed">
                 <div class="sidebar-inner d-flex flex-column h-100 p-3">
                     <!-- Editor Part -->
                     <div class="editor-section flex-grow-1 d-flex flex-column mb-3">
