--- a/static/index.html
+++ b/static/index.html
@@ -66,53 +66,59 @@
                     <!-- Welcome Hero Section -->
                     <div id="welcome-hero"
                         class="p-3 welcome-section d-flex flex-column align-items-center justify-content-center text-center p-5">
+                        
+                        <!-- Hero Icon -->
                         <div class="hero-icon mb-4">
                             <i class="bi bi-rocket-takeoff-fill display-1 text-accent animate-float"></i>
                         </div>
-                        <h1 class="display-4 fw-bold mb-3">Master Your Code with <span class="text-accent">My
-                                Coder</span></h1>
+
+                        <!-- Main Title -->
+                        <h1 class="display-4 fw-bold mb-3">Level Up Your Coding with <span class="text-accent">My Coder</span></h1>
+
+                        <!-- Subtitle -->
                         <p class="lead text-muted mb-5" style="max-width: 600px;">
-                            The ultra-fast, secure, and intelligent coding companion powered by Qwen. Start building,
-                            debugging, and learning in real-time.
+                            A smart, secure, and fast coding assistant powered by Qwen-Coder. Write, run, and improve Python code safely in real-time.
                         </p>
 
+                        <!-- Features -->
                         <div class="row g-4 w-100 justify-content-center" style="max-width: 900px;">
+                            
                             <div class="col-md-4">
                                 <div class="feature-card glass-effect p-4 h-100">
                                     <i class="bi bi-shield-check fs-2 text-success mb-3 d-block"></i>
-                                    <h5>Secure Sandbox</h5>
-                                    <p class="small text-muted mb-0">Run Python code in a protected environment with
-                                        resource limits.</p>
+                                    <h5>Safe Sandbox</h5>
+                                    <p class="small text-muted mb-0">Execute Python code securely with resource limits and protection.</p>
                                 </div>
                             </div>
+
                             <div class="col-md-4">
                                 <div class="feature-card glass-effect p-4 h-100">
                                     <i class="bi bi-lightning-charge-fill fs-2 text-warning mb-3 d-block"></i>
-                                    <h5>Fast Inference</h5>
-                                    <p class="small text-muted mb-0">Optimized Qwen-Coder model with sub-second response
-                                        times.</p>
+                                    <h5>Fast & Responsive</h5>
+                                    <p class="small text-muted mb-0">Optimized Qwen-Coder model delivers quick code suggestions and solutions.</p>
                                 </div>
                             </div>
+
                             <div class="col-md-4">
                                 <div class="feature-card glass-effect p-4 h-100">
                                     <i class="bi bi-window-sidebar fs-2 text-info mb-3 d-block"></i>
-                                    <h5>VS Code Editor</h5>
-                                    <p class="small text-muted mb-0">Full Monaco Editor experience with syntax
-                                        highlighting and auto-complete.</p>
+                                    <h5>VS Code Experience</h5>
+                                    <p class="small text-muted mb-0">Full-featured Monaco Editor with syntax highlight and autocomplete.</p>
                                 </div>
                             </div>
+
                         </div>
 
+                        <!-- Suggestions / Call to Action -->
                         <div class="mt-5 d-flex gap-3 flex-wrap justify-content-center">
                             <span class="text-muted small w-100 mb-2">Try asking:</span>
-                            <button class="btn btn-outline-secondary btn-sm rounded-pill px-3 suggestion-chip">"Write a
-                                Python class for a library system"</button>
-                            <button class="btn btn-outline-secondary btn-sm rounded-pill px-3 suggestion-chip">"Show me
-                                how to use list comprehensions"</button>
-                            <button class="btn btn-outline-secondary btn-sm rounded-pill px-3 suggestion-chip">"How do I
-                                use abstraction in Python?"</button>
+                            <button class="btn btn-outline-secondary btn-sm rounded-pill px-3 suggestion-chip">"Create a Python class for a library"</button>
+                            <button class="btn btn-outline-secondary btn-sm rounded-pill px-3 suggestion-chip">"Explain list comprehensions"</button>
+                            <button class="btn btn-outline-secondary btn-sm rounded-pill px-3 suggestion-chip">"How to use abstraction in Python?"</button>
                         </div>
+
                     </div>
+
 
                     <!-- Messages will be appended here -->
 
