--- a/static/index.html
+++ b/static/index.html
@@ -64,8 +64,7 @@
                 <div id="chat-container" class="chat-messages flex-grow-1">
 
                     <!-- Welcome Hero Section -->
-                    <div id="welcome-hero"
-                        class="p-3 welcome-section d-flex flex-column align-items-center justify-content-center text-center p-5">
+                    <div id="welcome-hero" class="p-5 welcome-section d-flex flex-column align-items-center justify-content-center text-center p-5">
                         
                         <!-- Hero Icon -->
                         <div class="hero-icon mb-4">
@@ -118,7 +117,6 @@
                         </div>
 
                     </div>
-
 
                     <!-- Messages will be appended here -->
 
