add context memory

--- a/static/index.html
+++ b/static/index.html
@@ -64,7 +64,7 @@
                 <div id="chat-container" class="chat-messages flex-grow-1">
 
                     <!-- Welcome Hero Section -->
-                    <div id="welcome-hero" style="padding:2vw !important;" class="p-5 welcome-section d-flex flex-column align-items-center justify-content-center text-center p-5">
+                    <div id="welcome-hero" style="padding:2vw;" class="p-5 welcome-section d-flex flex-column align-items-center justify-content-center text-center p-5">
                         
                         <!-- Hero Icon -->
                         <div class="hero-icon mb-4">
